Added file info section to metadata-editor do display important data points for each file.  Fixed a bug where reopening file-editor with the same item as before would break.  Addressed an issue with a previously edited displayName would no update when the file-editor is opened on a different item.  Moved metadata-editor to editors folder.  Pulled logic used to extract and format file info for display into a file-info-mixin.

--- a/editors/file-editor.html
+++ b/editors/file-editor.html
@@ -30,8 +30,8 @@
 <app-header-overlay id="overlay"
                     header-size="[[__computeHeaderSize(_isImg, _isVid)]]"
                     prebuilt-animation="from-right"
-                    title="[[_title]]"
-                    on-overlay-reset="__reset">
+                    reveal-header
+                    title="[[_title]]">
 
   <lazy-image alt="[[item.displayName]]"
               hidden="[[!_isImg]]"
@@ -64,6 +64,7 @@
 
     <metadata-editor is-img="[[_isImg]]"
                      item="[[item]]"
+                     list="[[list]]"
                      on-display-name-changed="__displayNameChanged">
     </metadata-editor>
 
