--- a/app-file-system.html
+++ b/app-file-system.html
@@ -49,7 +49,8 @@
 
 
 <file-editor id="fileEditor" 
-             item="[[_liveItem]]">
+             item="[[_liveItem]]"
+             list="[[list]]">
 </file-editor>
 
 
@@ -60,7 +61,8 @@
 
 
 <image-editor id="imageEditor"
-              item="[[_liveItem]]">
+              item="[[_liveItem]]"
+              list="[[list]]">
 </image-editor>
 
 
