--- a/lists/quick-options.html
+++ b/lists/quick-options.html
@@ -10,10 +10,12 @@
     right:           0px;
     bottom:          0px;
     left:            0px;
-    opacity:         0px;
+    opacity:         0;
     transition:      transform 0.2s var(--custom-ease, ease-in),
                      opacity 0.15s linear 0.05s;
     transform:       scale(0, 0);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter:         blur(4px);
   }
 
   #background {
