Added dark mode props to top level app-file-system files.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -48,7 +48,8 @@
 </preview-lists>
 
 
-<file-editor id="fileEditor" 
+<file-editor id="fileEditor"
+             dark-mode="[[darkMode]]"
              item="[[_liveItem]]"
              list="[[list]]">
 </file-editor>
