--- a/shared/file-thumbnail.html
+++ b/shared/file-thumbnail.html
@@ -50,6 +50,7 @@
 <template is="dom-if"
           if="[[_isVid]]">
   <lazy-video class="item"
+              aspect-ratio="[[aspectRatio]]"
               controls="[[controls]]"
               placeholder="[[_vidPlaceholder]]"
               presentation="[[presentation]]"
