--- a/lists/roll-items.html
+++ b/lists/roll-items.html
@@ -2,25 +2,35 @@
 <style>
 
   :host {
-  	--thumbnail-scale: 		 100px;
-    display: 							 grid;
-    grid-template-columns: repeat(auto-fit, minmax(var(--thumbnail-scale), 1fr));
-    grid-gap: 2px;
-    padding:  2px;
+    /*
+      Scales between 72px to 148px. 110px is the midpoint.
+      This equates to having 4 photos across on smallest 
+      supported phone screen and two across on large phone sizes.
+    */
+    --thumbnail-size:      110px; 
+    display:               grid;
+    grid-template-columns: repeat(auto-fit, minmax(var(--thumbnail-size), 1fr));
+    /*
+      Grid gap must be an odd number for css width and height % calculations to not be off by 1px.
+      The browser cannot center an element by half pixel values.
+      This becomes especially visible with rotated orientation images.
+    */
+    grid-gap: 3px; 
+    padding:  3px;
   }
 
   .box {
-  	position: 	 relative;
-  	height: 		 0px;
-  	padding-top: 100%;
+    position:    relative;
+    height:      0px;
+    padding-top: 100%;
   }
 
   .wrapper {
-  	position: absolute;
-  	top: 			0px;
-  	right:    0px;
-  	bottom: 	0px;
-  	left: 		0px;
+    position: absolute;
+    top:      0px;
+    right:    0px;
+    bottom:   0px;
+    left:     0px;
   }
 
 </style>
@@ -31,16 +41,16 @@
           strip-whitespace>
 
   <div class="box">
-  	<div class="wrapper">
-		  <roll-item class="roll-item"
-		             coll="[[coll]]"
-		             doc="[[doc]]"
-		             field="[[field]]"
-		             hide-checkbox="[[hideCheckboxes]]"
-		             item="[[item]]"
-		             selected="[[all]]">
-		  </roll-item>
-		</div>
-	</div>
+    <div class="wrapper">
+      <roll-item class="roll-item"
+                 coll="[[coll]]"
+                 doc="[[doc]]"
+                 field="[[field]]"
+                 hide-checkbox="[[hideCheckboxes]]"
+                 item="[[item]]"
+                 selected="[[all]]">
+      </roll-item>
+    </div>
+  </div>
 
 </template>
