Moved database fetch for items out of top level and into file-list in preparation for pagination logic.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -24,8 +24,8 @@
 
 <file-sources id="sources"
               accept="[[accept]]"
+              data="[[_dbData]]"
               hide-dropzone="[[hideDropzone]]"
-              items="[[_items]]"
               list="[[list]]"
               maxfiles="[[maxfiles]]"
               maxsize="[[maxsize]]"
@@ -41,7 +41,6 @@
                coll="[[coll]]"
                files="[[_files]]"
                hide-dropzone="[[hideDropzone]]"
-               items="[[_items]]"
                list="[[list]]">
 </preview-lists>
 
@@ -54,8 +53,7 @@
 
 
 <photo-carousel id="carousel"
-                currentItem="[[_liveItem]]"
-                item="[[_items]]">
+                currentItem="[[_liveItem]]">
 </photo-carousel>
 
 
