--- a/sources/file-sources.html
+++ b/sources/file-sources.html
@@ -55,7 +55,7 @@
                     fixed-header
                     title="File Sources">
 
-  <list-icon-button items="[[items]]"
+  <list-icon-button data="[[data]]"
                     list="[[list]]"
                     slot="top-toolbar-buttons-slot"
                     on-click="__listBtnClicked">
