--- a/lists/preview-lists.html
+++ b/lists/preview-lists.html
@@ -2,11 +2,11 @@
 <file-list id="fileList"
            coll="[[coll]]"
            hide-dropzone="[[hideDropzone]]"
-           items="[[_previewItems]]">
+           files="[[files]]">
 </file-list>
 
 
 <camera-roll id="cameraRoll"
              coll="[[coll]]"
-             items="[[_previewItems]]">
+             files="[[files]]">
 </camera-roll>
