Refactored in order to remove preview-list element since it was causing more confusion than it was helping to abstract the file-list and camera-roll elements. Fixed backdrop-filter issue in camera-roll on safari. Implemented database subscription for camera-roll in preparation for upcomming pagination functionality.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -37,12 +37,17 @@
 
 
 <!-- _files from events-mixin.js -->
-<preview-lists id="lists"
-               coll="[[coll]]"
-               files="[[_files]]"
-               hide-dropzone="[[hideDropzone]]"
-               list="[[list]]">
-</preview-lists>
+<file-list id="fileList"
+           coll="[[coll]]"
+           hide-dropzone="[[hideDropzone]]"
+           files="[[_files]]">
+</file-list>
+
+<!-- _files from events-mixin.js -->
+<camera-roll id="cameraRoll"
+             coll="[[coll]]"
+             files="[[_files]]">
+</camera-roll>
 
 
 <file-editor id="fileEditor"
