--- a/lists/roll-item.html
+++ b/lists/roll-item.html
@@ -9,6 +9,10 @@
     background-color: var(--app-background-color);
   }
 
+  processing-icon {
+    background-color: transparent;
+  }
+
 </style>
 
 
